--- a/pages/search/index.html
+++ b/pages/search/index.html
@@ -389,7 +389,7 @@
 
                     <div class="col-6 col-md-6 col-lg-3 product-search-result">
                         <div class="product-img">
-                            <span class="badget">-50%</span>
+                            <span class="badget">-50</span>
                             <img src="../../src/img/products/women/product-women-4-2.jpg" class="product-img-content product-img2">
                             <img src="../../src/img/products/women/product-women-4-1.jpg" class="product-img-content product-img1">
                         </div>
