--- a/pages/detailProduct/indexpd.html
+++ b/pages/detailProduct/indexpd.html
@@ -252,9 +252,9 @@
             </div>
             <div class='introduction'>
                 <div class='row'>
-                    <div class='col-lg-12 col-12'>
+                    <div class='col-lg-12 col-12 sizechart'>
                         <h3>Size chart</h3>
-                        <img src='./sources/imgs/sizechart.jpg'>
+                        <img class="sizechart-img" src='./sources/imgs/sizechart.jpg'>
                     </div>
                 </div>
             </div>          
@@ -693,6 +693,7 @@
         </footer>    
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src ="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"> </script>
     <script>
         var navBtn = document.getElementById('navigation-bar');
         var category = document.querySelector('.category');
