--- a/pages/detailProduct/indexpd.html
+++ b/pages/detailProduct/indexpd.html
@@ -66,7 +66,7 @@
                                 menu
                             </span>
                         </div>
-                        <div class="list d-flex align-items-center justify-content-center">
+                        <div class="list d-md-none d-lg-flex align-items-center justify-content-center">
                             <ul class="nav-list hide-on-mobile-tablet">
                                 <li class="nav-item">Trang chủ</li>
                                 <li class="nav-item">Sản phẩm</li>
