--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div id="header">
                     <div class="container">
                         <div class="logo">
-                            <a href="../../index.html"><img src="../../src/img/logo.png" class="image"/></a>
+                            <a href="./index.html"><img src="./src/img/logo.png" class="image"/></a>
                         </div>
                         <div id="navigation-bar">
                             <span class="material-symbols-outlined bar-icon">
