--- a/pages/search/index.html
+++ b/pages/search/index.html
@@ -295,8 +295,8 @@
                                 <span class="badget">
                                     -50%
                                 </span>
-                                <img src="/src/img/products/women/product-women-1-2 (2).jpg" class="product-img-content product-img2"/>
-                                <img src="/src/img/products/women/product-women-1-1 (3).jpg" class="product-img-content product-img1"/>
+                                <img src="../../src/img/products/women/product-women-1-2 (2).jpg" class="product-img-content product-img2"/>
+                                <img src="../../src/img/products/women/product-women-1-1 (3).jpg" class="product-img-content product-img1"/>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title product-info">
@@ -340,10 +340,10 @@
                                 <span class="badget">
                                     -50%
                                 </span>
-                                <a href="/pages/detailProduct/indexpd.html">
-                                    <img src="/src/img/products/women/product-women-2-2.jpg" class="product-img-content product-img2"/>
+                                <a href="../../pages/detailProduct/indexpd.html">
+                                    <img src="../../src/img/products/women/product-women-2-2.jpg" class="product-img-content product-img2"/>
                                 </a>
-                                <img src="/src/img/products/women/product-women-2-1.jpg" class="product-img-content product-img1"/>
+                                <img src="../../src/img/products/women/product-women-2-1.jpg" class="product-img-content product-img1"/>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title product-info">
@@ -387,8 +387,8 @@
                                 <span class="badget">
                                     -50%
                                 </span>
-                                <img src="/src/img/products/women/product-women-3-2.jpg" class="product-img-content product-img2"/>
-                                <img src="/src/img/products/women/product-women-3-1.jpg" class="product-img-content product-img1"/>
+                                <img src="../../src/img/products/women/product-women-3-2.jpg" class="product-img-content product-img2"/>
+                                <img src="../../src/img/products/women/product-women-3-1.jpg" class="product-img-content product-img1"/>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title product-info">
@@ -432,8 +432,8 @@
                                 <span class="badget">
                                     -50%
                                 </span>
-                                <img src="/src/img/products/women/product-women-4-2.jpg" class="product-img-content product-img2"/>
-                                <img src="/src/img/products/women/product-women-4-1.jpg" class="product-img-content product-img1"/>
+                                <img src="../../src/img/products/women/product-women-4-2.jpg" class="product-img-content product-img2"/>
+                                <img src="../../src/img/products/women/product-women-4-1.jpg" class="product-img-content product-img1"/>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title product-info">
