--- a/pages/search/index.html
+++ b/pages/search/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
@@ -103,7 +104,7 @@
     <!--Content-->
     <div class="container">
         <!--Filter + Products-->
-        <div class="row" style="margin-top:3rem;">
+        <div class="row">
             <!--Filter-->    
             <div class="col-lg-3">
                 <div class="d-lg-none filter-heading" id="filter-control">
@@ -112,134 +113,47 @@
                 </div>
 
                 <div class="filter container" style="text-align: center;">
-                    <div class="dropdown-container">
-                        <div class="select-box">
-                            <div class="option-container">
-                                <div class="option ofSize">
-                                    <input type="radio" class="radio" name="category" id="s">
-                                    <label for="s">S</label>
-                                </div>
-                                <div class="option ofSize">
-                                    <input type="radio" class="radio" name="category" id="m">
-                                    <label for="m">M</label>
-                                </div>
-                                <div class="option ofSize">
-                                    <input type="radio" class="radio" name="category" id="l">
-                                    <label for="l">L</label>
-                                </div>
-                                <div class="option ofSize">
-                                    <input type="radio" class="radio" name="category" id="xl">
-                                    <label for="xl">XL</label>
-                                </div>
-                                <div class="option ofSize">
-                                    <input type="radio" class="radio" name="category" id="s">
-                                    <label for="xxl">XXL</label>
-                                </div>
-                            </div>
-                            <div class="selected">
-                                Chọn Size
-                            </div>
-                        </div>
-                    </div>
-                    <div class="dropdown-container">
-                        <div class="select-box">
-                            <div class="option-container">
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="green">
-                                    <label for="green">Xanh</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="pink">
-                                    <label for="pink">Hồng</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="red">
-                                    <label for="red">Đỏ</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="white">
-                                    <label for="white">Trắng</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="brown">
-                                    <label for="brown">Nâu</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="black">
-                                    <label for="black">Đen</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="orange">
-                                    <label for="orange">Cam</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="violet">
-                                    <label for="violet">Tím</label>
-                                </div>
-                            </div>
-                            <div class="selected">
-                                Chọn Màu sắc
-                            </div>
-                        </div>
-                    </div>
-                    <div class="dropdown-container">
-                        <div class="select-box">
-                            <div class="option-container">
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="1m_less">
-                                    <label for="1m_less">Dưới đ1.000.000</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="1m_to_2m">
-                                    <label for="1m_to_2m">Từ đ1.000.000 đến đ2.000.000</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="2m_to_3.5m">
-                                    <label for="2m_to_3.5m">Từ đ2.000.000 đến đ3.500.000</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="3.5_to_5m">
-                                    <label for="3.5m_to_5m">Từ đ3.500.000 đến đ5.000.000</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="5m_more">
-                                    <label for="5m_more">Trên đ5.000.000</label>
-                                </div>
-                            </div>
-                            <div class="selected">
-                                Chọn Mức giá
-                            </div>
-                        </div>
-                    </div>
-                    <div class="dropdown-container">
-                        <div class="select-box">
-                            <div class="option-container">
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="30_less">
-                                    <label for="30_less">Dưới 30%</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="30_to_50">
-                                    <label for="30_to_50">Từ 30% đến 50%</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="50_to_70">
-                                    <label for="50_to_70">Từ 50% đến 70%</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="70_more">
-                                    <label for="70_more">Trên 70%</label>
-                                </div>
-                                <div class="option">
-                                    <input type="radio" class="radio" name="category" id="special">
-                                    <label for="special">Giá đặc biệt</label>
-                                </div>
-                            </div>
-                            <div class="selected">
-                                Chọn Mức chiết khấu
-                            </div>
-                        </div>
-                    </div>
+
+                    <select class="selectpicker" name="size" id="size" multiple required>
+                        <option disabled selected>Size</option>
+                        <option value="s">S</option>
+                        <option value="m">M</option>
+                        <option value="l">L</option>
+                        <option value="xl">XL</option>
+                        <option value="xxl">XXL</option>
+                    </select>
+
+                    <select class="selectpicker" name="color" id="color" multiple required>
+                        <option disabled selected>Màu sắc</option>
+                        <option value="yellow" style="color: var(--yellow);">Vàng</option>
+                        <option value="green" style="color: var(--green);">Xanh lá</option>
+                        <option value="pink" style="color: var(--pink);">Hồng</option>
+                        <option value="red" style="color: var(--red);">Đỏ</option>
+                        <option value="white" style="color: var(--white);">Trắng</option>
+                        <option value="brown" style="color: var(--brown);">Nâu</option>
+                        <option value="black" style="color: var(--black);">Đen</option>
+                        <option value="orange" style="color: var(--orange);">Cam</option>
+                        <option value="violet" style="color: var(--violet);">Tím</option>
+                    </select>
+
+                    <select class="selectpicker" name="price" id="price" required>
+                        <option disabled selected>Mức giá</option>
+                        <option value="less_1m">Dưới đ1.000.000</option>
+                        <option value="1m-2m">đ1.000.000 - đ2.000.000</option>
+                        <option value="2m-3.5m">đ2.000.000 - đ3.500.000</option>
+                        <option value="3.5m-5m">đ3.500.000 - đ5.000.000</option>
+                        <option value="more_5m">Trên đ5.000.000</option>
+                    </select>
+
+                    <select class="selectpicker" name="discount" id="discount" required>
+                        <option disabled selected>Mức chiết khấu</option>
+                        <option value="less_30">Dưới 30%</option>
+                        <option value="30-50">30% - 50%</option>
+                        <option value="50-70">50% - 70%</option>
+                        <option value="more_70">Trên 70%</option>
+                        <option value="special">Giá đặc biệt</option>
+                    </select>
+
                     <div type="button" class="btn btnFilter" id="filterbutton">Filter</div>
                     <div type="button" class="btn btnFilter" id="resetbutton">Reset</div>
                 </div>
@@ -249,42 +163,19 @@
                 <!--Sort dropdown-->
                 <div class="row">
                     <div class="col-12 col-lg-7 cold-md-7">
-                        <div style="font-size: 2rem; margin-top: 1.5rem; margin-left: -0.5rem;">Kết quả tìm theo " "</div>
+                        <div style="font-size: 2rem; margin-top: 1.5rem; margin-left: -0.5rem; padding-top: 2rem;">Kết quả tìm theo " "</div>
                     </div>
-                    <div class="col-12 col-lg-5 col-md-5">
-                        <div class="dropdown-container" id="dropdown-sort">
-                            <div class="select-box" id="sorter">
-                                <div class="option-container">
-                                    <div class="option">
-                                        <input type="radio" class="radio" name="category" id="default">
-                                        <label for="default">Mặc định</label>
-                                    </div>
-                                    <div class="option">
-                                        <input type="radio" class="radio" name="category" id="newest">
-                                        <label for="newest">Mới nhất</label>
-                                    </div>
-                                    <div class="option">
-                                        <input type="radio" class="radio" name="category" id="most_bought">
-                                        <label for="most_bought">Được mua nhiều nhất</label>
-                                    </div>
-                                    <div class="option">
-                                        <input type="radio" class="radio" name="category" id="most_liked">
-                                        <label for="most_liked">Được yêu thích nhất</label>
-                                    </div>
-                                    <div class="option">
-                                        <input type="radio" class="radio" name="category" id="price_hi2lo">
-                                        <label for="price_hi2lo">Giá: cao đến thấp</label>
-                                    </div>
-                                    <div class="option">
-                                        <input type="radio" class="radio" name="category" id="price_lo2hi">
-                                        <label for="price_lo2hi">Giá: thấp đến cao</label>
-                                    </div>
-                                </div>
-                                <div class="selected" id="sort-text">
-                                    Sắp xếp theo
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-12 col-lg-5 col-md-5" style="z-index: 10000000; margin-top: 2rem;">
+                        <select class="selectpicker" name="sorter" id="sorter" required>
+                            <option disabled selected>Sắp xếp theo</option>
+                            <option value="default">Mặc định</option>
+                            <option value="newest">Mới nhất</option>
+                            <option value="most_purchased">Được mua nhiều nhất</option>
+                            <option value="most_liked">Được yêu thích nhất</option>
+                            <option value="hi_to_low">Giá: cao đến thấp</option>
+                            <option value="low_to_hi">Giá: thấp đến cao</option>
+                        </select>
+
                     </div>
                 </div>
                 <!--The product-->
@@ -630,5 +521,6 @@
             searchSection.classList.remove('translateY');
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 </body>
 </html>
