--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./pages/detailProduct/stylespd.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
@@ -68,12 +69,56 @@
                             <span class="material-symbols-outlined header-icon search-icon">
                                 search
                             </span>
-                            <span class="material-symbols-outlined header-icon cart">
+                            <span class="material-symbols-outlined header-icon cart-icon">
                                 shopping_cart
                                 </span>
-                            <span class="material-symbols-outlined header-icon user">
+                            <span class="material-symbols-outlined header-icon user-icon">
                                 person
                             </span>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-9 cart">
+                            <div class="cart-header">
+                                <div class="cart-title">
+                                    <div class="content">Giỏ hàng</div>
+                                    <div class="quantity">2</div>
+                                </div>
+                                <i class="fa-solid fa-xmark cancel-icon"></i>
+                            </div>
+                           <div class="cart-body">
+                                <div class="cart-item">
+                                    <div class="row">
+                                        <div class="col-3">
+                                            <img src="./src/img/products/women/product-women-6-1.jpg" class="cart-item-img" alt="">
+                                        </div>
+                                        <div class="col-9">
+                                            <div class="cart-item-name">
+                                                Đầm Cut Out Đính Ngọc Trai
+                                            </div>
+                                            <div class="cart-item-color-size">
+                                                <div class="color">
+                                                    Màu sắc: Trắng
+                                                </div>
+                                                <div class="size">
+                                                    Size: S
+                                                </div>
+                                            </div>
+                                            <div class="cart-item-quantity">
+                                                <div class="cart-item-quantity-minus">
+                                                    <span class="material-symbols-outlined minus-icon">
+                                                        remove
+                                                    </span>
+                                                </div>
+                                                <input type='text' value='1' min='0' max='10' class='cart-item-quantity-input'>
+                                                <div class="cart-item-quantity-plus">
+                                                    <span class="material-symbols-outlined plus-icon">
+                                                        add
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                           </div>
                         </div>
                     </div>            
                 </div>
@@ -1322,8 +1367,8 @@
             navBtn.onclick = function() {
                 category.classList.add('translateX');
             }
-            var cancelBtn = document.querySelector('.category .cancel-icon');
-            cancelBtn.onclick = function() {
+            var cancelBtnCategory = document.querySelector('.category .cancel-icon');
+            cancelBtnCategory.onclick = function() {
                 category.classList.remove('translateX');
             }
             var typeList = document.getElementsByClassName('type-item');
@@ -1362,14 +1407,18 @@
             cancleBtnSearch.onclick = function() {
                 searchSection.classList.remove('translateY');
             }
-            
-            const barIcon = document.querySelector('.bar-icon');
-            barIcon.onclick = function() {
-
+            const cartBtn = document.querySelector('.nav-icon .cart-icon');
+            console.log(cartBtn);
+            const cartMenu = document.querySelector('.cart');
+            cartBtn.onclick = function() {
+                cartMenu.classList.add('translateX');
+            }
+            const cancleBtnCart = document.querySelector('.cart-header .cancel-icon');
+            cancleBtnCart.onclick = function() {
+                cartMenu.classList.remove('translateX');
             }
         </script>
     </body>
     <script src="https://kit.fontawesome.com/644376ed9d.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    
 </html>
