fixed multiple select

--- a/pages/search/index.html
+++ b/pages/search/index.html
@@ -114,8 +114,7 @@
 
                 <div class="filter container" style="text-align: center;">
 
-                    <select class="selectpicker" name="size" id="size" multiple required>
-                        <option disabled selected>Size</option>
+                    <select title="Size" class="selectpicker" name="size" id="size" multiple required>
                         <option value="s">S</option>
                         <option value="m">M</option>
                         <option value="l">L</option>
@@ -123,8 +122,7 @@
                         <option value="xxl">XXL</option>
                     </select>
 
-                    <select class="selectpicker" name="color" id="color" multiple required>
-                        <option disabled selected>Màu sắc</option>
+                    <select title="Màu sắc" class="selectpicker" name="color" id="color" multiple required>
                         <option value="yellow" style="color: var(--yellow);">Vàng</option>
                         <option value="green" style="color: var(--green);">Xanh lá</option>
                         <option value="pink" style="color: var(--pink);">Hồng</option>
@@ -136,8 +134,7 @@
                         <option value="violet" style="color: var(--violet);">Tím</option>
                     </select>
 
-                    <select class="selectpicker" name="price" id="price" required>
-                        <option disabled selected>Mức giá</option>
+                    <select title="Mức giá" class="selectpicker" name="price" id="price" required>
                         <option value="less_1m">Dưới đ1.000.000</option>
                         <option value="1m-2m">đ1.000.000 - đ2.000.000</option>
                         <option value="2m-3.5m">đ2.000.000 - đ3.500.000</option>
@@ -145,8 +142,7 @@
                         <option value="more_5m">Trên đ5.000.000</option>
                     </select>
 
-                    <select class="selectpicker" name="discount" id="discount" required>
-                        <option disabled selected>Mức chiết khấu</option>
+                    <select title="Mức chiết khấu" class="selectpicker" name="discount" id="discount" required>
                         <option value="less_30">Dưới 30%</option>
                         <option value="30-50">30% - 50%</option>
                         <option value="50-70">50% - 70%</option>
@@ -166,8 +162,7 @@
                         <div style="font-size: 2rem; margin-top: 1.5rem; margin-left: -0.5rem; padding-top: 2rem;">Kết quả tìm theo " "</div>
                     </div>
                     <div class="col-12 col-lg-5 col-md-5" style="z-index: 10000000; margin-top: 2rem;">
-                        <select class="selectpicker" name="sorter" id="sorter" required>
-                            <option disabled selected>Sắp xếp theo</option>
+                        <select title="Sắp xếp theo" class="selectpicker" name="sorter" id="sorter" required>
                             <option value="default">Mặc định</option>
                             <option value="newest">Mới nhất</option>
                             <option value="most_purchased">Được mua nhiều nhất</option>
