--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                 <div class="cart-total-title">Tổng cộng:</div>
                                 <div class="cart-total-money"></div>
                            </div>
-                           <a href="./pages/cart/index.html">
+                           <a href="./pages/cart/index.html" class="cart-btn-link">
                                 <div class="cart-btn-view">
                                     Xem giỏ hàng
                                 </div>
