cart-page completed

--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
                             <span class="material-symbols-outlined header-icon search-icon">
                                 search
                             </span>
-                            <span class="material-symbols-outlined header-icon cart-icon">
-                                shopping_cart
+                            <div class="header-icon">
+                                <span class="material-symbols-outlined cart-icon">
+                                    shopping_cart
                                 </span>
+                                <span class="cart-number"></span>
+                            </div>
                             <span class="material-symbols-outlined header-icon user-icon">
                                 person
                             </span>
@@ -1451,5 +1454,4 @@
         <script src="./script.js"></script>
     </body>
     <script src="https://kit.fontawesome.com/644376ed9d.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </html>
