--- a/pages/cart/index.html
+++ b/pages/cart/index.html
@@ -202,8 +202,8 @@
                             <div class="cart-total-title">Tổng cộng:</div>
                             <div class="cart-total-money"></div>
                         </div>
-                        <a href="./index.html">
-                            <div class="cart-btn-view" class="cart-btn-link">
+                        <a href="./index.html" class="cart-btn-link">
+                            <div class="cart-btn-view">
                                 Xem giỏ hàng
                             </div>
                         </a>
