--- a/pages/checkout/index.html
+++ b/pages/checkout/index.html
@@ -199,8 +199,8 @@
                             <div class="cart-total-title">Tổng cộng:</div>
                             <div class="cart-total-money"></div>
                         </div>
-                        <a href="./index.html">
-                            <div class="cart-btn-view" class="cart-btn-link">
+                        <a href="../cart/index.html" class="cart-btn-link">
+                            <div class="cart-btn-view">
                                 Xem giỏ hàng
                             </div>
                         </a>
@@ -386,14 +386,20 @@
                             <div class="checkout-confirm-list">
                                 <div class="checkout-confirm-item">
                                     <div class="checkout-confirm-item-left">Tổng tiền hàng</div>
-                                    <div class="checkout-confirm-item-right sum-checkout"></div>
+                                    <div class="checkout-confirm-item-right checkout-sum"></div>
                                 </div>
-                                <div class="checkout-confirm-item"></div>
-                                <div class="checkout-confirm-item"></div>
-                                <div class="checkout-confirm-item"></div>
-                                <div class="checkout-confirm-item"></div>
+                                <div class="checkout-confirm-item">
+                                    <div class="checkout-confirm-item-left">Phí ship</div>
+                                    <div class="checkout-confirm-item-right checkout-ship">20.000đ</div>
+                                </div>
+                                <div class="checkout-confirm-item">
+                                    <div class="checkout-confirm-item-left">Thành tiền</div>
+                                    <div class="checkout-confirm-item-right checkout-total"></div>
+                                </div>
                             </div>
-                            
+                            <div class="checkout-confirm-btn">
+                                Hoàn tất đơn hàng
+                            </div>
                         </div>
                     </div>
                 </div>
