login page + fix some bugs:))

--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
                                 </span>
                                 <span class="cart-number"></span>
                             </div>
-                            <span class="material-symbols-outlined header-icon user-icon">
-                                person
-                            </span>
+                            <a href="./pages/login/index.html" class="header-icon user-icon">
+                                <span class="material-symbols-outlined">
+                                    person
+                                </span>
+                            </a>
                         </div>
                         <div class="col-lg-4 col-md-4 col-9 cart">
                             <div class="cart-header">
