--- a/pages/checkout/index.html
+++ b/pages/checkout/index.html
@@ -67,12 +67,17 @@
                         <span class="material-symbols-outlined header-icon search-icon">
                             search
                         </span>
-                        <span class="material-symbols-outlined header-icon cart-icon">
-                            shopping_cart
+                        <div class="header-icon">
+                            <span class="material-symbols-outlined cart-icon">
+                                shopping_cart
                             </span>
-                        <span class="material-symbols-outlined header-icon user-icon">
-                            person
-                        </span>
+                            <span class="cart-number"></span>
+                        </div>
+                        <a href="../../pages/login/index.html" class="header-icon user-icon">
+                            <span class="material-symbols-outlined">
+                                person
+                            </span>
+                        </a>
                     </div>
                     <div class="col-lg-4 col-md-4 col-9 cart">
                         <div class="cart-header">
