register page + fix some bugs

--- a/pages/checkout/index.html
+++ b/pages/checkout/index.html
@@ -32,9 +32,11 @@
             <div class="category">
                 <i class="fa-solid fa-xmark cancel-icon"></i>
                 <br>
-                <button class="login-btn">
-                    Đăng nhập
-                </button>
+                <a href="../../pages/login/index.html">
+                    <button class="login-btn">
+                        Đăng nhập
+                    </button>
+                </a>
                 <ul class="category-list">
                     <li class="category-item">Trang chủ</li>
                     <li class="category-item">Sản phẩm</li>
@@ -238,21 +240,21 @@
                             </div>
                             <div class="checkout-payment-input">
                                 <div class="checkout-payment-input-item">
-                                    <input type="radio">
+                                    <input type="radio" name="checkout-method">
                                     <span class="material-symbols-outlined checkout-payment-input-item-icon">
                                         credit_card
                                     </span>
                                     <div class="checkout-payment-input-item-txt">Thanh toán thẻ (ATM, Visa, Mastercard)</div>
                                 </div>
                                 <div class="checkout-payment-input-item">
-                                    <input type="radio">
+                                    <input type="radio" name="checkout-method">
                                     <span class="material-symbols-outlined checkout-payment-input-item-icon">
                                         shopping_bag
                                     </span>
                                     <div class="checkout-payment-input-item-txt">Thanh toán bằng ví Shopee Pay</div>
                                 </div>
                                 <div class="checkout-payment-input-item">
-                                    <input type="radio">
+                                    <input type="radio" name="checkout-method">
                                     <span class="material-symbols-outlined checkout-payment-input-item-icon">
                                         local_shipping
                                     </span>
