--- a/pages/detailProduct/indexpd.html
+++ b/pages/detailProduct/indexpd.html
@@ -42,9 +42,11 @@
                 <div class="container ">
                     <i class="fa-solid fa-xmark cancel-icon"></i>
                     <br>
-                    <button class="login-btn">
-                        Đăng nhập
-                    </button>
+                    <a href="../../pages/login/index.html">
+                        <button class="login-btn">
+                            Đăng nhập
+                        </button>
+                    </a>
                     <ul class="category-list">
                         <li class="category-item">Trang chủ</li>
                         <li class="category-item">Sản phẩm</li>
