--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -32,9 +32,11 @@
             <div class="category">
                 <i class="fa-solid fa-xmark cancel-icon"></i>
                 <br>
-                <button class="login-btn">
-                    Đăng nhập
-                </button>
+                <a href="./index.html">
+                    <button class="login-btn">
+                        Đăng nhập
+                    </button>
+                </a>
                 <ul class="category-list">
                     <li class="category-item">Trang chủ</li>
                     <li class="category-item">Sản phẩm</li>
@@ -204,7 +206,7 @@
                             <div class="cart-total-title">Tổng cộng:</div>
                             <div class="cart-total-money"></div>
                         </div>
-                        <a href="./index.html" class="cart-btn-link">
+                        <a href="../../pages/cart/index.html" class="cart-btn-link">
                             <div class="cart-btn-view">
                                 Xem giỏ hàng
                             </div>
@@ -237,7 +239,7 @@
                             Đăng nhập
                         </div>
                         <div class="login-form-sign-up">
-                            Bạn chưa có tài khoản? <a href="#" class="login-form-sign-up-link">Đăng kí tại đây</a>
+                            Bạn chưa có tài khoản? <a href="../register/index.html" class="login-form-sign-up-link">Đăng kí tại đây</a>
                         </div>
                     </div>
                 </div>
