--- a/pages/search/index.html
+++ b/pages/search/index.html
@@ -34,9 +34,11 @@
         <div class="category">
             <i class="fa-solid fa-xmark cancel-icon"></i>
             <br>
-            <button class="login-btn">
-                Đăng nhập
-            </button>
+            <a href="../../pages/login/index.html">
+                <button class="login-btn">
+                    Đăng nhập
+                </button>
+            </a>
             <!-- <div class="search d-flex mb-2">
                     
                 <span class="material-symbols-outlined header-icon search-icon">
